--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^2.2.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
+    "resend": "^3.4.0",
     "zod": "^3.23.8"
   }
 }
