--- a/env/.env
+++ b/env/.env
@@ -2,3 +2,4 @@ PORT=4000
 IP_ADDRESS=0.0.0.0
 RESENDER_KEY=re_GDKgDv6N_3NaDXZqaNwTdrVNxPACjpeqB
 JOBFACE_FORNTEND_ADDRESS=http://localhost:5173
+PG_URL=postgresql://postgres:Josuenito01@localhost:5432/authface
