--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/src/server/index.js",
-    "dev": "ts-node src/server/index.ts",
+    "dev": "tsx watch src/server/index.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "@types/pg": "^8.11.6",
     "morgan": "^1.10.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
